<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".register.RegistActivity">

    <TextView
        android:id="@+id/title_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/titleRegist"
        android:textSize="25sp"
        android:textColor="@color/pink"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subTitleRegis"
        android:textColor="@color/pink"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_reg" />

    <EditText
        android:id="@+id/edtNamaReg"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:drawablePadding="3dp"
        android:ems="10"
        android:hint="@string/nama"
        android:alpha="0"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_reg"
        app:layout_constraintVertical_bias="0.18" />


    <EditText
        android:id="@+id/edtEmailReg"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="3dp"
        android:ems="10"
        android:hint="@string/emailLog"
        android:alpha="0"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNamaReg"
        app:layout_constraintVertical_bias="0.058" />

    <com.bella.storyappbella.customView.MyEditText
        android:id="@+id/edtPassReg"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:drawableStart="@drawable/baseline_key_24"
        android:drawablePadding="3dp"
        android:hint="@string/passLog"
        android:alpha="0"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtEmailReg"
        app:layout_constraintStart_toStartOf="@+id/edtEmailReg"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailReg"/>

    <TextView
        android:id="@+id/tvMinPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minPass"
        android:alpha="0"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/btnRegist"
        app:layout_constraintTop_toBottomOf="@+id/edtPassReg"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="29dp" />

    <com.bella.storyappbella.customView.ButtonCustom
        android:id="@+id/btnRegist"
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:layout_marginTop="76dp"
        android:padding="8dp"
        android:text="@string/daftar"
        android:alpha="0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/edtPassReg"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edtPassReg"
        app:layout_constraintTop_toBottomOf="@+id/edtPassReg" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />
</androidx.constraintlayout.widget.ConstraintLayout>